un push avant creation de CourseServiceImpl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8081
 # ─── Base de données ────────────────────────────────────────────────────────
 spring.datasource.url=jdbc:postgresql://localhost:5432/TripDB
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=Helios1290
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ─── JPA / Hibernate ─────────────────────────────────────────────────────────
