--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # ─── JPA / Hibernate ─────────────────────────────────────────────────────────
 # ✅ CORRECTION A : dialecte valide pour Spring Boot 3.x + Hibernate 6
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
